[package]
name = "spotify-key-bpm-sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.15", features = ["client-reqwest", "env-file", "cli"] }
tokio = { version = "1.48", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
